--- a/GegaGamez.WebUI/Pages/Games/Add.cshtml
+++ b/GegaGamez.WebUI/Pages/Games/Add.cshtml
@@ -3,28 +3,36 @@
 @{
 }
 
-<form method="post" id="add-game-form">
+<form method="post" id="add-game-form" class="vertical-container">
 	<img src="img/game.png" alt="New game image" />
 	<div>
 		<label asp-for="NewGame.Title"></label>
 		<input asp-for="NewGame.Title" />
 	</div>
+
 	<div>
-		<label asp-for="NewGame.ReleaseDate"></label>
-		<input asp-for="NewGame.ReleaseDate" />
-	</div>
-	<div>
-		<label asp-for="@Model.NewGame.DeveloperId">Developers</label>
+		<label asp-for="NewGame.DeveloperId">Developer</label>
 		<select asp-items="@Model.Developers" asp-for="NewGame.DeveloperId"></select>
-	</div>
-	<div>
-		<label asp-for="NewGame.GenreIds">Genres</label>
-		<select asp-for="NewGame.GenreIds" multiple asp-items="@Model.Genres" />
 	</div>
 
 	<div>
-		<button type="submit">Submit new game</button>
-		<button type="reset">Reset</button>
+		<label asp-for="NewGame.ReleaseDate">Release Date</label>
+		<input type="date" asp-for="NewGame.ReleaseDate" />
+	</div>
+	
+	<div>
+		<label asp-for="NewGame.Description"></label>
+		<textarea asp-for="NewGame.Description"></textarea>
+	</div>
+
+	<div class="vertical-container">
+		<label asp-for="NewGame.GenreIds">Genres</label>
+		<select asp-for="NewGame.GenreIds" asp-items="@Model.Genres" multiple></select>
+	</div>
+
+	<div class="flex-container">
+		<button type="submit" class="btn-contrast rounded">Submit new game</button>
+		<button type="reset" class="btn-contrast rounded">Reset</button>
 	</div>
 	
 </form>
