--- a/GegaGamez.WebUI/Pages/Games/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Games/Index.cshtml
@@ -96,20 +96,21 @@
 			<a asp-page="/Users/Index" asp-route-id="@comment.User.Id">            
                 <img class="img-standard circle user-avatar" src="/img/avatar.png" alt="Alternate Text" />
             </a>
-
-        <!--<h3>Username</h3>-->
-
             <span>
                 @comment.Text
                 <span class="font-secondary">
-                    - Date
+                    - @comment.CreatedAt.ToShortDateString() by
+                    <a class="inverse-link" asp-route-id="@comment.User.Id" asp-page="/Users/Index">@comment.User.Username</a>
+
                 </span>
             </span>
 
             <div class="btn-group comment-actions">
                 
                 @if(comment.User.Id == userId){
-                    <button type="button" onclick="showDeleteCommentModal(@comment.Id)" class="btn-contrast btn-icon btn-remove-comment"><i class="fa-solid fa-trash"></i></button>
+                    <button type="button" onclick="showDeleteCommentModal(@comment.Id)" class="btn-contrast btn-icon btn-remove-comment">
+                        <i class="fa-solid fa-trash"></i>
+                    </button>
                 }
             </div>
         </article>
@@ -117,17 +118,18 @@
   
 </section>
 
-<form method="post" id="delete-comment-modal" class="popup-interactive bg-secondary border-primary">
+<!-- Delete Comment modal -->
+<form asp-page-handler="DeleteComment" method="post" id="delete-comment-modal" class="popup-interactive bg-secondary border-primary">
     <h3 class="font-contrast">Delete this comment?</h3>
-    <input type="number" name="id" value="@Model.Game.Id" readonly />
+    <input type="number" name="id" hidden value="@Model.Game.Id" readonly />
     <section class="main-something"></section>
     <section class="popup-actions">
-        <button type="submit" class="borderless">Do something</button>
+        <button type="submit" class="borderless">Yes, delete</button>
         <button type="button" onclick="hideDeleteCommentModal()" class="btn-contrast rounded">Cancel</button>
     </section>
 </form>
 
-<!-- MOVE GAME TO COLLECTION modal!!! -->
+<!-- Game to Collection modal -->
 <form asp-page-handler="MoveGameToCollection" method="post" id="move-game-to-collection-modal" class="popup-interactive bg-secondary border-primary">
 	@*<input asp-for value=@Model.Game.Id />*@
     <h3 class="font-contrast">
@@ -150,7 +152,7 @@
 
 </form>
 
-<!-- Rate game modal -->
+<!-- Rate Game modal -->
 <form method="post" asp-page-handler="RateGame" id="rate-game-modal" class="popup-interactive bg-secondary border-primary">
     <h3 class="font-contrast">
         How do you rate this game?
@@ -167,6 +169,7 @@
 
 </form>
 
+<!-- Delete Game modal -->
 <form method="post" asp-page-handler="DeleteGame" id="delete-game-modal" class="popup-interactive bg-secondary border-primary">
     <h3 class="font-contrast">
         Are you sure you want to delete this game?
