--- a/GegaGamez.WebUI/Pages/Games/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Games/Search.cshtml
@@ -70,12 +70,20 @@
                 <div class="text-info-block">
                     <h3 class="game-title-small">@game.Title</h3>
 
-                    <span class="rating-small">
-                        Average score / 10
+                    @if (game.AvgRatingScore.HasValue)
+                    {
+                        <span  class="rating-small">@game.AvgRatingScore / 10</span>
+                    }
+                    else
+                    {
+                        <span class="rating-small font-contrast">No rating yet</span>
+                    }
+
                     </span>
 
                     <span class="font-secondary">
-                        @game.ReleaseDate.Year, @game.Developer.Name
+                        @game.ReleaseDate.Year,
+                        <a asp-page="/Developers/Index" asp-route-id=@game.Developer.Id> @game.Developer.Name</a>
                     </span>
 
                     <span class="game-description-small">
