--- a/GegaGamez.WebUI/wwwroot/css/sitewide.css
+++ b/GegaGamez.WebUI/wwwroot/css/sitewide.css
@@ -21,4 +21,27 @@
         white-space: nowrap;
     }
 
+
+#info-message {
+    display: flex;
+    justify-content:space-around;
+    align-items:center;
+    color: black;
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    z-index: 1;
+    background-color: yellow;
+    transition: left 2s, opacity 2s;
+}
+    #info-message.closed {
+        left: -100%;
+        opacity: 0;
+        /*transform: scaleX(0);*/
+    }
+#info-message button{
+    font-size: 30px;
+}
 /* END */
