--- a/GegaGamez.WebUI/Pages/Developers/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Developers/Search.cshtml
@@ -26,8 +26,8 @@
             <div class="text-info-block">
                 <h3 class="game-title-small">@dev.Name</h3>
 
-                <span class="game-description-small">
-                    Something about a developer
+                <span class="game-description-small font-secondary">
+                    @dev.Description
                 </span>
             </div>
         </article>
