--- a/GegaGamez.WebUI/Pages/Users/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Users/Index.cshtml
@@ -61,7 +61,7 @@
                         <span class="collection-name">@defaultCollection.Type.Name</span>
                     </a>
                     <section class="game-collection-actions">
-                        <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+
                     </section>
                 </div>
             }
@@ -84,7 +84,7 @@
                     </a>
 
                     <section class="game-collection-actions">
-                        <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                        <button type="button" onclick="showDeleteCollectionModal()" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
                     </section>
                 </div>
             }
