--- a/GegaGamez.WebUI/Pages/Games/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Games/Index.cshtml
@@ -35,7 +35,7 @@
          
         </span>
         <span class="font-secondary">
-            <a href="#" class="font-secondary">@Model.Game.Developer.Name</a>, <span>Price</span>
+            <a asp-page="/Developers/Index" asp-route-id="@Model.Game.Developer.Id" class="font-secondary">@Model.Game.Developer.Name</a>
         </span>
 
         <span class="font-secondary">
