--- a/GegaGamez.WebUI/wwwroot/css/main.css
+++ b/GegaGamez.WebUI/wwwroot/css/main.css
@@ -1,8 +1,8 @@
 /* LINKS AND BUTTONS*/
 
 .btn-contrast {
-    --btn-width: 110px;
-    --btn-height: 32px;
+    --btn-width: 115px;
+    --btn-height: 34px;
     align-content: center;
     align-items: center;
     width: var(--btn-width);
@@ -530,3 +530,21 @@ a.inverse-link {
     font-size: 50px;
     color: var(--text-color-contrast);
 }
+.game-form {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+.game-form label {
+    width: 15%;
+    display: inline-block;
+}
+.game-form > div{
+    margin-bottom: 20px;
+}
+.game-form select[multiple]{
+    margin-left: 15%;
+}
+    .game-form input, .game-form select, .game-form textarea {
+        width: 50%;
+    }
