--- a/GegaGamez.WebUI/Pages/Games/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Games/Index.cshtml
@@ -74,10 +74,10 @@
         </button>
         <form asp-page-handler="Comment" method="post" class="flex-container form-add-comment">
             <img class="img-standard circle user-avatar" src="/img/avatar.png" alt="Alternate Text" />
-            <input asp-for="NewComment.UserId" value="@userId" hidden/>
-            <input asp-for="NewComment.GameId" value="@Model.Game.Id" hidden />
+            <input asp-for="NewComment!.UserId" value="@userId" hidden/>
+            <input asp-for="NewComment!.GameId" value="@Model.Game.Id" hidden />
 
-            <textarea asp-for="NewComment.Text" class="comment-textarea" placeholder="Enter your comment here..."></textarea>
+            <textarea asp-for="NewComment!.Text" class="comment-textarea" placeholder="Enter your comment here..."></textarea>
 
             <div class="btn-group comment-actions">
                 <button type="submit" class="btn-add-comment btn-contrast btn-icon"><i class="fa-regular fa-paper-plane"></i></button>
@@ -86,8 +86,6 @@
     }
     @foreach(var comment in Model.Comments)
     {
-        // generate comments
-
         <article class="flex-container game-comment">
 			<a asp-page="/Users/Index" asp-route-id="@comment.User.Id">            
                 <img class="img-standard circle user-avatar" src="/img/avatar.png" alt="Alternate Text" />
