--- a/GegaGamez.WebUI/Pages/Users/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Users/Search.cshtml
@@ -27,7 +27,7 @@
             <div class="text-info-block">
                 <h3 class="game-title-small">@user.Username</h3>
 
-                <span class="game-description-small">
+                <span class="game-description-small font-secondary">
                     @user.Country?.Name
                 </span>
             </div>
